[package]
name = "easy_signals"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
easy_self_referencing_objects  = { git = "https://github.com/Amelia-Mowers/easy_self_referencing_objects.git" }
easy_events  = { git = "https://github.com/Amelia-Mowers/easy_events.git" }
